argocd/wacruit-dev/wacruit-judge-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wacruit-judge-server
  labels:
    app: wacruit-judge-server
spec:
  replicas: 0
  selector:
    matchLabels:
      app: wacruit-judge-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: wacruit-judge-server
    spec:
      serviceAccountName: wacruit
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/wacruit-dev/wacruit-judge-server
          name: wacruit-judge-server
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 2358
---
apiVersion: v1
kind: Service
metadata:
  name: wacruit-judge-server
spec:
  type: ClusterIP
  selector:
    app: wacruit-judge-server
  ports:
    - port: 80
      targetPort: 2358
