argocd/wacruit-dev/wacruit-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wacruit-server
  labels:
    app: wacruit-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wacruit-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: wacruit-server
    spec:
      serviceAccountName: wacruit
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/wacruit-dev/wacruit-server
          name: wacruit-server
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: wacruit-server
spec:
  type: ClusterIP
  selector:
    app: wacruit-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wacruit-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - wacruit-server.wacruit-dev.svc.cluster.local
    - wacruit-dev.wafflestudio.com
    - dev.wafflestudio.com
  http:
    - route:
        - destination:
            host: wacruit-server
